# glab

./: CMakeLists.txt  README.md  deepvac_ocr_frame.py
src/: glab.cpp  glab.h  main.cpp
